# flormuerte

./: .gitignore  README.md  aminoacido.py  base.py  flor.py  lienzo.py  pyproject.toml  secuencia.py  test.py
material/bacteria/: Treponema pallidum subsp. pallidum str. Nichols chromosome, complete genome.gbk  Vibrio cholerae O1 biovar El Tor str. N16961 chromosome II, complete sequence.gbk
material/virus/: Dengue virus 1, complete genome.gbk  Hantavirus Z10 chromosome L, complete genome.gbk  Hepatitis C virus genotype 1, complete genome.gbk  Human immunodeficiency virus 1, complete genome.gbk  Influenza A virus - AHong Kong107399 - H9N2 -- segment 1, complete sequence.gbk  Measles virus, complete genome.gbk  Rabies virus, complete genome.gbk  Rotavirus F chicken03V0568DEU2003 segment 1, complete sequence.gbk  Yellow fever virus, complete genome.gbk
