[tool.poetry]
name = "arbolmuerte"
version = "0.1.0"
description = "Proyecto arte generativo hecho con Python, Pygame y Bioseq"
authors = ["Pablo Diaz <pabloandi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pygame = "^1.9.6"
biopython = "^1.76"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
